force-app/main/default/objects/custom_create183__c/custom_create183__c.object-meta.xml
<CustomObject>
    <label>Custom created object183</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects183</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>