force-app/main/default/objects/custom_create183__c/fields/custom_create_183field529__c.field-meta.xml
<CustomField>
    <fullName>custom_create_183field529__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 183field529</label>
    <type>Checkbox</type>
</CustomField>